--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "1dd7d457-db57-4cc1-9b3b-53e6426fc077",
    "metadata": {
     "tags": []
@@ -91,64 +91,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>99.367188</td>\n",
-       "      <td>41.572202</td>\n",
-       "      <td>1.547197</td>\n",
-       "      <td>4.154106</td>\n",
-       "      <td>27.555184</td>\n",
-       "      <td>61.719016</td>\n",
-       "      <td>2.208808</td>\n",
-       "      <td>3.662680</td>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
+       "      <td>140.562500</td>\n",
+       "      <td>55.683782</td>\n",
+       "      <td>-0.234571</td>\n",
+       "      <td>-0.699648</td>\n",
+       "      <td>3.199833</td>\n",
+       "      <td>19.110426</td>\n",
+       "      <td>7.975532</td>\n",
+       "      <td>74.242225</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>120.554688</td>\n",
-       "      <td>45.549905</td>\n",
-       "      <td>0.282924</td>\n",
-       "      <td>0.419909</td>\n",
-       "      <td>1.358696</td>\n",
-       "      <td>13.079034</td>\n",
-       "      <td>13.312141</td>\n",
-       "      <td>212.597029</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
+       "      <td>102.507812</td>\n",
+       "      <td>58.882430</td>\n",
+       "      <td>0.465318</td>\n",
+       "      <td>-0.515088</td>\n",
+       "      <td>1.677258</td>\n",
+       "      <td>14.860146</td>\n",
+       "      <td>10.576487</td>\n",
+       "      <td>127.393580</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>27.765625</td>\n",
-       "      <td>28.666042</td>\n",
-       "      <td>5.770087</td>\n",
-       "      <td>37.419009</td>\n",
-       "      <td>73.112876</td>\n",
-       "      <td>62.070220</td>\n",
-       "      <td>1.268206</td>\n",
-       "      <td>1.082920</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2</th>\n",
+       "      <td>103.015625</td>\n",
+       "      <td>39.341649</td>\n",
+       "      <td>0.323328</td>\n",
+       "      <td>1.051164</td>\n",
+       "      <td>3.121237</td>\n",
+       "      <td>21.744669</td>\n",
+       "      <td>7.735822</td>\n",
+       "      <td>63.171909</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>23.625000</td>\n",
-       "      <td>29.948654</td>\n",
-       "      <td>5.688038</td>\n",
-       "      <td>35.987172</td>\n",
-       "      <td>146.568562</td>\n",
-       "      <td>82.394624</td>\n",
-       "      <td>-0.274902</td>\n",
-       "      <td>-1.121848</td>\n",
-       "      <td>1</td>\n",
+       "      <th>3</th>\n",
+       "      <td>136.750000</td>\n",
+       "      <td>57.178449</td>\n",
+       "      <td>-0.068415</td>\n",
+       "      <td>-0.636238</td>\n",
+       "      <td>3.642977</td>\n",
+       "      <td>20.959280</td>\n",
+       "      <td>6.896499</td>\n",
+       "      <td>53.593661</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>94.585938</td>\n",
-       "      <td>35.779823</td>\n",
-       "      <td>1.187309</td>\n",
-       "      <td>3.687469</td>\n",
-       "      <td>6.071070</td>\n",
-       "      <td>29.760400</td>\n",
-       "      <td>5.318767</td>\n",
-       "      <td>28.698048</td>\n",
-       "      <td>1</td>\n",
+       "      <th>4</th>\n",
+       "      <td>88.726562</td>\n",
+       "      <td>40.672225</td>\n",
+       "      <td>0.600866</td>\n",
+       "      <td>1.123492</td>\n",
+       "      <td>1.178930</td>\n",
+       "      <td>11.468720</td>\n",
+       "      <td>14.269573</td>\n",
+       "      <td>252.567306</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -163,133 +163,133 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17515</th>\n",
-       "      <td>89.867188</td>\n",
-       "      <td>47.482295</td>\n",
-       "      <td>1.591325</td>\n",
-       "      <td>2.505057</td>\n",
-       "      <td>0.763378</td>\n",
-       "      <td>12.393561</td>\n",
-       "      <td>17.940745</td>\n",
-       "      <td>333.902630</td>\n",
-       "      <td>1</td>\n",
+       "      <th>17893</th>\n",
+       "      <td>136.429688</td>\n",
+       "      <td>59.847421</td>\n",
+       "      <td>-0.187846</td>\n",
+       "      <td>-0.738123</td>\n",
+       "      <td>1.296823</td>\n",
+       "      <td>12.166062</td>\n",
+       "      <td>15.450260</td>\n",
+       "      <td>285.931022</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17529</th>\n",
-       "      <td>27.039062</td>\n",
-       "      <td>33.754722</td>\n",
-       "      <td>4.779124</td>\n",
-       "      <td>26.255357</td>\n",
-       "      <td>129.863712</td>\n",
-       "      <td>78.815440</td>\n",
-       "      <td>-0.348492</td>\n",
-       "      <td>-0.893791</td>\n",
-       "      <td>1</td>\n",
+       "      <th>17894</th>\n",
+       "      <td>122.554688</td>\n",
+       "      <td>49.485605</td>\n",
+       "      <td>0.127978</td>\n",
+       "      <td>0.323061</td>\n",
+       "      <td>16.409699</td>\n",
+       "      <td>44.626893</td>\n",
+       "      <td>2.945244</td>\n",
+       "      <td>8.297092</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17558</th>\n",
-       "      <td>77.070312</td>\n",
-       "      <td>39.000638</td>\n",
-       "      <td>1.884421</td>\n",
-       "      <td>6.372178</td>\n",
-       "      <td>38.517559</td>\n",
-       "      <td>65.741059</td>\n",
-       "      <td>1.589513</td>\n",
-       "      <td>1.285346</td>\n",
-       "      <td>1</td>\n",
+       "      <th>17895</th>\n",
+       "      <td>119.335938</td>\n",
+       "      <td>59.935939</td>\n",
+       "      <td>0.159363</td>\n",
+       "      <td>-0.743025</td>\n",
+       "      <td>21.430602</td>\n",
+       "      <td>58.872000</td>\n",
+       "      <td>2.499517</td>\n",
+       "      <td>4.595173</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17642</th>\n",
-       "      <td>28.375000</td>\n",
-       "      <td>27.649311</td>\n",
-       "      <td>6.377273</td>\n",
-       "      <td>45.944048</td>\n",
-       "      <td>141.860368</td>\n",
-       "      <td>82.893017</td>\n",
-       "      <td>-0.477222</td>\n",
-       "      <td>-1.067880</td>\n",
-       "      <td>1</td>\n",
+       "      <th>17896</th>\n",
+       "      <td>114.507812</td>\n",
+       "      <td>53.902400</td>\n",
+       "      <td>0.201161</td>\n",
+       "      <td>-0.024789</td>\n",
+       "      <td>1.946488</td>\n",
+       "      <td>13.381731</td>\n",
+       "      <td>10.007967</td>\n",
+       "      <td>134.238910</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17876</th>\n",
-       "      <td>111.765625</td>\n",
-       "      <td>52.943585</td>\n",
-       "      <td>0.671724</td>\n",
-       "      <td>0.383594</td>\n",
-       "      <td>149.843646</td>\n",
-       "      <td>97.926948</td>\n",
-       "      <td>-0.696153</td>\n",
-       "      <td>-1.260403</td>\n",
-       "      <td>1</td>\n",
+       "      <th>17897</th>\n",
+       "      <td>57.062500</td>\n",
+       "      <td>85.797340</td>\n",
+       "      <td>1.406391</td>\n",
+       "      <td>0.089520</td>\n",
+       "      <td>188.306020</td>\n",
+       "      <td>64.712562</td>\n",
+       "      <td>-1.597527</td>\n",
+       "      <td>1.429475</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1639 rows × 9 columns</p>\n",
+       "<p>17898 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       mean_integrated_profile  standard_dev_integrated_profile  \\\n",
-       "19                   99.367188                        41.572202   \n",
-       "42                  120.554688                        45.549905   \n",
-       "61                   27.765625                        28.666042   \n",
-       "92                   23.625000                        29.948654   \n",
-       "93                   94.585938                        35.779823   \n",
+       "0                   140.562500                        55.683782   \n",
+       "1                   102.507812                        58.882430   \n",
+       "2                   103.015625                        39.341649   \n",
+       "3                   136.750000                        57.178449   \n",
+       "4                    88.726562                        40.672225   \n",
        "...                        ...                              ...   \n",
-       "17515                89.867188                        47.482295   \n",
-       "17529                27.039062                        33.754722   \n",
-       "17558                77.070312                        39.000638   \n",
-       "17642                28.375000                        27.649311   \n",
-       "17876               111.765625                        52.943585   \n",
+       "17893               136.429688                        59.847421   \n",
+       "17894               122.554688                        49.485605   \n",
+       "17895               119.335938                        59.935939   \n",
+       "17896               114.507812                        53.902400   \n",
+       "17897                57.062500                        85.797340   \n",
        "\n",
        "       excess_kurtosis_integrated_profile  skewness_integrated_profile  \\\n",
-       "19                               1.547197                     4.154106   \n",
-       "42                               0.282924                     0.419909   \n",
-       "61                               5.770087                    37.419009   \n",
-       "92                               5.688038                    35.987172   \n",
-       "93                               1.187309                     3.687469   \n",
+       "0                               -0.234571                    -0.699648   \n",
+       "1                                0.465318                    -0.515088   \n",
+       "2                                0.323328                     1.051164   \n",
+       "3                               -0.068415                    -0.636238   \n",
+       "4                                0.600866                     1.123492   \n",
        "...                                   ...                          ...   \n",
-       "17515                            1.591325                     2.505057   \n",
-       "17529                            4.779124                    26.255357   \n",
-       "17558                            1.884421                     6.372178   \n",
-       "17642                            6.377273                    45.944048   \n",
-       "17876                            0.671724                     0.383594   \n",
+       "17893                           -0.187846                    -0.738123   \n",
+       "17894                            0.127978                     0.323061   \n",
+       "17895                            0.159363                    -0.743025   \n",
+       "17896                            0.201161                    -0.024789   \n",
+       "17897                            1.406391                     0.089520   \n",
        "\n",
        "       mean_DM-SNR_curve  standard_dev_DM-SNR_curve  \\\n",
-       "19             27.555184                  61.719016   \n",
-       "42              1.358696                  13.079034   \n",
-       "61             73.112876                  62.070220   \n",
-       "92            146.568562                  82.394624   \n",
-       "93              6.071070                  29.760400   \n",
+       "0               3.199833                  19.110426   \n",
+       "1               1.677258                  14.860146   \n",
+       "2               3.121237                  21.744669   \n",
+       "3               3.642977                  20.959280   \n",
+       "4               1.178930                  11.468720   \n",
        "...                  ...                        ...   \n",
-       "17515           0.763378                  12.393561   \n",
-       "17529         129.863712                  78.815440   \n",
-       "17558          38.517559                  65.741059   \n",
-       "17642         141.860368                  82.893017   \n",
-       "17876         149.843646                  97.926948   \n",
+       "17893           1.296823                  12.166062   \n",
+       "17894          16.409699                  44.626893   \n",
+       "17895          21.430602                  58.872000   \n",
+       "17896           1.946488                  13.381731   \n",
+       "17897         188.306020                  64.712562   \n",
        "\n",
        "       excess_kurtosis_DM-SNR_curve  skewness_DM-SNR_curve  class  \n",
-       "19                         2.208808               3.662680      1  \n",
-       "42                        13.312141             212.597029      1  \n",
-       "61                         1.268206               1.082920      1  \n",
-       "92                        -0.274902              -1.121848      1  \n",
-       "93                         5.318767              28.698048      1  \n",
+       "0                          7.975532              74.242225      0  \n",
+       "1                         10.576487             127.393580      0  \n",
+       "2                          7.735822              63.171909      0  \n",
+       "3                          6.896499              53.593661      0  \n",
+       "4                         14.269573             252.567306      0  \n",
        "...                             ...                    ...    ...  \n",
-       "17515                     17.940745             333.902630      1  \n",
-       "17529                     -0.348492              -0.893791      1  \n",
-       "17558                      1.589513               1.285346      1  \n",
-       "17642                     -0.477222              -1.067880      1  \n",
-       "17876                     -0.696153              -1.260403      1  \n",
+       "17893                     15.450260             285.931022      0  \n",
+       "17894                      2.945244               8.297092      0  \n",
+       "17895                      2.499517               4.595173      0  \n",
+       "17896                     10.007967             134.238910      0  \n",
+       "17897                     -1.597527               1.429475      0  \n",
        "\n",
-       "[1639 rows x 9 columns]"
+       "[17898 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TEMP_DATA_NAME[TEMP_DATA_NAME[\"class\"] == 1]"
+    "TEMP_DATA_NAME#[TEMP_DATA_NAME[\"class\"] == 1]"
    ]
   },
   {
