--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -3,6 +3,78 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ffc71c02-6184-4f75-a5d4-0d2be687939a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Uncomment cell below whenever Altair stops working to reinstall latest version\n",
+    "\n",
+    "## For some reason, whenever the jupyter server restarts, it\n",
+    "## sends you back to the old version of altair (4.2.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "61103806-6b47-41e0-8a2d-f2cf09de8045",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: altair in /opt/conda/lib/python3.10/site-packages (5.1.2)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from altair) (23.0)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair) (1.23.5)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair) (4.17.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair) (4.4.0)\n",
+      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair) (3.1.2)\n",
+      "Requirement already satisfied: pandas>=0.25 in /opt/conda/lib/python3.10/site-packages (from altair) (1.5.3)\n",
+      "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair) (0.12.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair) (22.2.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair) (0.19.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.25->altair) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.25->altair) (2022.7.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.10/site-packages (from jinja2->altair) (2.1.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas>=0.25->altair) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pip install -U altair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "375ce614-d04b-40b4-91ed-73909ec2a680",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5.1.2'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## If the text below says anything below version 5.0.0,\n",
+    "## run the code above\n",
+    "import altair as alt; alt.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a4b2fb0e-58a1-4619-bf3f-dc56cef38419",
    "metadata": {
     "tags": []
@@ -36,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3405cdd8-b1cb-4fe5-8e3c-5b4b8584695a",
    "metadata": {
     "tags": []
@@ -53,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "1dd7d457-db57-4cc1-9b3b-53e6426fc077",
    "metadata": {
     "tags": []
@@ -284,7 +356,7 @@
        "[1273 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e0ebc6e7-816f-4066-9238-e1dc62855de7",
    "metadata": {
     "tags": []
@@ -310,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f05ca1b0-50a5-4344-8544-c46d6fd3aef4",
    "metadata": {
     "tags": []
@@ -1214,7 +1286,7 @@
        "1260   1.8kg   754.507138  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,8 +1297,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "53379c1f-dc57-4eb4-8590-9f575cd83cae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed {\n",
+       "    width: 100%;\n",
+       "    display: flex;\n",
+       "  }\n",
+       "\n",
+       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed details,\n",
+       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed details summary {\n",
+       "    position: relative;\n",
+       "  }\n",
+       "</style>\n",
+       "<div id=\"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.15.1?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.15.1\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-569730501ddd0cac7f3a81d3e89fd5ee\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"x\": {\"field\": \"Company\", \"title\": \"Laptop Brand\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Average Price\", \"title\": \"Average Price of Laptops\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-569730501ddd0cac7f3a81d3e89fd5ee\": [{\"Company\": \"Acer\", \"Average Price\": 593.255188}, {\"Company\": \"Apple\", \"Average Price\": 1562.5582775999999}, {\"Company\": \"Asus\", \"Average Price\": 970.2369861559322}, {\"Company\": \"Chuwi\", \"Average Price\": 406.68624000000005}, {\"Company\": \"Dell\", \"Average Price\": 1079.1121528928572}, {\"Company\": \"Fujitsu\", \"Average Price\": 587.83824}, {\"Company\": \"Google\", \"Average Price\": 1573.30512}, {\"Company\": \"HP\", \"Average Price\": 975.444826752}, {\"Company\": \"Lenovo\", \"Average Price\": 947.0420823085715}, {\"Company\": \"MSI\", \"Average Price\": 1538.2519973581395}, {\"Company\": \"Mediacom\", \"Average Price\": 267.1992}, {\"Company\": \"Microsoft\", \"Average Price\": 1460.3643960000002}, {\"Company\": \"Razer\", \"Average Price\": 3030.8023542857145}, {\"Company\": \"Samsung\", \"Average Price\": 1113.17904}, {\"Company\": \"Toshiba\", \"Average Price\": 1137.56112}, {\"Company\": \"Vero\", \"Average Price\": 198.93508800000004}, {\"Company\": \"Xiaomi\", \"Average Price\": 1086.5647920000001}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laptop_brand_avg_price = (\n",
+    "    laptop_train.groupby([\"Company\"])\n",
+    "        .mean([\"Price\"])\n",
+    "        .reset_index()\n",
+    "        .rename(columns = {\"Price\" : \"Average Price\"})\n",
+    ")\n",
+    "\n",
+    "laptop_brand_plot = alt.Chart(laptop_brand_avg_price).mark_bar().encode(\n",
+    "    x=alt.X(\"Company\").title(\"Laptop Brand\"),\n",
+    "    y=alt.Y(\"Average Price\")\n",
+    "        .title(\"Average Price of Laptops\") \n",
+    ")\n",
+    "laptop_brand_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbd7b988-c6ce-421b-bc99-3230ff722ce7",
    "metadata": {},
    "outputs": [],
    "source": []
