Made Chart look nicer

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "53379c1f-dc57-4eb4-8590-9f575cd83cae",
    "metadata": {},
    "outputs": [
@@ -1306,23 +1306,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed {\n",
+       "  #altair-viz-982482da90a04370b93c1deae191a550.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed details,\n",
-       "  #altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e.vega-embed details summary {\n",
+       "  #altair-viz-982482da90a04370b93c1deae191a550.vega-embed details,\n",
+       "  #altair-viz-982482da90a04370b93c1deae191a550.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\"></div>\n",
+       "<div id=\"altair-viz-982482da90a04370b93c1deae191a550\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e7a7d2d80c3848d58b9c2c3badeb415e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-982482da90a04370b93c1deae191a550\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-982482da90a04370b93c1deae191a550\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1368,14 +1368,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-569730501ddd0cac7f3a81d3e89fd5ee\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"x\": {\"field\": \"Company\", \"title\": \"Laptop Brand\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Average Price\", \"title\": \"Average Price of Laptops\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-569730501ddd0cac7f3a81d3e89fd5ee\": [{\"Company\": \"Acer\", \"Average Price\": 593.255188}, {\"Company\": \"Apple\", \"Average Price\": 1562.5582775999999}, {\"Company\": \"Asus\", \"Average Price\": 970.2369861559322}, {\"Company\": \"Chuwi\", \"Average Price\": 406.68624000000005}, {\"Company\": \"Dell\", \"Average Price\": 1079.1121528928572}, {\"Company\": \"Fujitsu\", \"Average Price\": 587.83824}, {\"Company\": \"Google\", \"Average Price\": 1573.30512}, {\"Company\": \"HP\", \"Average Price\": 975.444826752}, {\"Company\": \"Lenovo\", \"Average Price\": 947.0420823085715}, {\"Company\": \"MSI\", \"Average Price\": 1538.2519973581395}, {\"Company\": \"Mediacom\", \"Average Price\": 267.1992}, {\"Company\": \"Microsoft\", \"Average Price\": 1460.3643960000002}, {\"Company\": \"Razer\", \"Average Price\": 3030.8023542857145}, {\"Company\": \"Samsung\", \"Average Price\": 1113.17904}, {\"Company\": \"Toshiba\", \"Average Price\": 1137.56112}, {\"Company\": \"Vero\", \"Average Price\": 198.93508800000004}, {\"Company\": \"Xiaomi\", \"Average Price\": 1086.5647920000001}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}, \"axisX\": {\"labelAngle\": -45}}, \"data\": {\"name\": \"data-569730501ddd0cac7f3a81d3e89fd5ee\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"field\": \"Company\", \"scale\": {\"scheme\": \"category20b\"}, \"type\": \"nominal\"}, \"x\": {\"field\": \"Company\", \"title\": \"Laptop Brand\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Average Price\", \"title\": \"Average Price of Laptops\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-569730501ddd0cac7f3a81d3e89fd5ee\": [{\"Company\": \"Acer\", \"Average Price\": 593.255188}, {\"Company\": \"Apple\", \"Average Price\": 1562.5582775999999}, {\"Company\": \"Asus\", \"Average Price\": 970.2369861559322}, {\"Company\": \"Chuwi\", \"Average Price\": 406.68624000000005}, {\"Company\": \"Dell\", \"Average Price\": 1079.1121528928572}, {\"Company\": \"Fujitsu\", \"Average Price\": 587.83824}, {\"Company\": \"Google\", \"Average Price\": 1573.30512}, {\"Company\": \"HP\", \"Average Price\": 975.444826752}, {\"Company\": \"Lenovo\", \"Average Price\": 947.0420823085715}, {\"Company\": \"MSI\", \"Average Price\": 1538.2519973581395}, {\"Company\": \"Mediacom\", \"Average Price\": 267.1992}, {\"Company\": \"Microsoft\", \"Average Price\": 1460.3643960000002}, {\"Company\": \"Razer\", \"Average Price\": 3030.8023542857145}, {\"Company\": \"Samsung\", \"Average Price\": 1113.17904}, {\"Company\": \"Toshiba\", \"Average Price\": 1137.56112}, {\"Company\": \"Vero\", \"Average Price\": 198.93508800000004}, {\"Company\": \"Xiaomi\", \"Average Price\": 1086.5647920000001}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,10 +1389,13 @@
     ")\n",
     "\n",
     "laptop_brand_plot = alt.Chart(laptop_brand_avg_price).mark_bar().encode(\n",
-    "    x=alt.X(\"Company\").title(\"Laptop Brand\"),\n",
+    "    x=alt.X(\"Company\")\n",
+    "        .title(\"Laptop Brand\"),\n",
     "    y=alt.Y(\"Average Price\")\n",
-    "        .title(\"Average Price of Laptops\") \n",
-    ")\n",
+    "        .title(\"Average Price of Laptops\"),\n",
+    "    color=alt.Color(\"Company\")\n",
+    "            .scale(scheme=\"category20b\")\n",
+    ").configure_axisX(labelAngle=-45)\n",
     "laptop_brand_plot"
    ]
   },
