Finished merging pull request and removed unnecessary imports

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4a6622da-a7d8-4bc7-9417-7c6e19619821",
+   "metadata": {},
+   "source": [
+    "# Using Specs to Predict Laptop Prices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1088bfd-82dc-467f-abec-26a6dc30253a",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "In today's modern age, technological devices have become an integral part of society. With ever-evolving computer components, it can be difficult to conduct research on a laptop that fits an individuals specific needs. In our algorithm, we will be providing price estimates based on the hardware specifications provided in our dataset. For instance, we could use variables such as CPU and OS to predict the price of a laptop. Ultimately, our goal is to assist the users and companies by providing a price estimate for their ideal laptop, thus, reducing the time needed for research."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f99d4d58-bca3-4ac7-8603-4e8e7296e53d",
+   "metadata": {},
+   "source": [
+    "## Methods\n",
+    "To conduct our preliminary data analysis, we will visualize the distributions of each variable in the data set. We will use graphs using the altair library to do this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ffc71c02-6184-4f75-a5d4-0d2be687939a",
@@ -66,20 +92,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn import set_config\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.model_selection import GridSearchCV, cross_validate, train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "# Simplify working with large datasets in Altair\n",
     "alt.data_transformers.disable_max_rows()\n",
     "\n",
     "# Output dataframes instead of arrays\n",
     "set_config(transform_output=\"pandas\")\n",
-    "\n",
-    "# Function needed to visualize images\n",
-    "# code below sourced from: https://gist.github.com/daviddalpiaz/ae62ae5ccd0bada4b9acd6dbc9008706\n",
-    "def show_digit(arr784):\n",
-    "    plt.imshow(np.array(arr784)[1:].reshape(28, 28), cmap=\"gray\")\n",
     "    \n",
     "np.random.seed(1137110237) #Randomly picked seed"
    ]
@@ -595,23 +615,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-94403bffd9464ad3a2a10ac048374c2f.vega-embed {\n",
+       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-94403bffd9464ad3a2a10ac048374c2f.vega-embed details,\n",
-       "  #altair-viz-94403bffd9464ad3a2a10ac048374c2f.vega-embed details summary {\n",
+       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed details,\n",
+       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-94403bffd9464ad3a2a10ac048374c2f\"></div>\n",
+       "<div id=\"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-94403bffd9464ad3a2a10ac048374c2f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-94403bffd9464ad3a2a10ac048374c2f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -701,23 +721,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65.vega-embed {\n",
+       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65.vega-embed details,\n",
-       "  #altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65.vega-embed details summary {\n",
+       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed details,\n",
+       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65\"></div>\n",
+       "<div id=\"altair-viz-d3f6159400be46bf80f92148964b34e0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-b16e3cfcaf01497fbbce1ac2f7fe5b65\");\n",
+       "    if (outputDiv.id !== \"altair-viz-d3f6159400be46bf80f92148964b34e0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-d3f6159400be46bf80f92148964b34e0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -807,23 +827,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3b80ee7043b14fba86cb338a89c55122.vega-embed {\n",
+       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3b80ee7043b14fba86cb338a89c55122.vega-embed details,\n",
-       "  #altair-viz-3b80ee7043b14fba86cb338a89c55122.vega-embed details summary {\n",
+       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed details,\n",
+       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3b80ee7043b14fba86cb338a89c55122\"></div>\n",
+       "<div id=\"altair-viz-8ed14b087404430fb548a3187391224b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3b80ee7043b14fba86cb338a89c55122\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3b80ee7043b14fba86cb338a89c55122\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8ed14b087404430fb548a3187391224b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8ed14b087404430fb548a3187391224b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -911,23 +931,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-095a5ad3be264d0ca234373feb048f13.vega-embed {\n",
+       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-095a5ad3be264d0ca234373feb048f13.vega-embed details,\n",
-       "  #altair-viz-095a5ad3be264d0ca234373feb048f13.vega-embed details summary {\n",
+       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed details,\n",
+       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-095a5ad3be264d0ca234373feb048f13\"></div>\n",
+       "<div id=\"altair-viz-348134bfd4764523adcff63be69ffe2b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-095a5ad3be264d0ca234373feb048f13\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-095a5ad3be264d0ca234373feb048f13\");\n",
+       "    if (outputDiv.id !== \"altair-viz-348134bfd4764523adcff63be69ffe2b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-348134bfd4764523adcff63be69ffe2b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1015,23 +1035,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-7398e361a5fa4625b5c2012c15be549d.vega-embed {\n",
+       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-7398e361a5fa4625b5c2012c15be549d.vega-embed details,\n",
-       "  #altair-viz-7398e361a5fa4625b5c2012c15be549d.vega-embed details summary {\n",
+       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed details,\n",
+       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-7398e361a5fa4625b5c2012c15be549d\"></div>\n",
+       "<div id=\"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-7398e361a5fa4625b5c2012c15be549d\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-7398e361a5fa4625b5c2012c15be549d\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1119,23 +1139,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-efb6fcf537eb42508257810cef83e485.vega-embed {\n",
+       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-efb6fcf537eb42508257810cef83e485.vega-embed details,\n",
-       "  #altair-viz-efb6fcf537eb42508257810cef83e485.vega-embed details summary {\n",
+       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed details,\n",
+       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-efb6fcf537eb42508257810cef83e485\"></div>\n",
+       "<div id=\"altair-viz-3159b60b348f4caa983a51a445b7fe91\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-efb6fcf537eb42508257810cef83e485\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-efb6fcf537eb42508257810cef83e485\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3159b60b348f4caa983a51a445b7fe91\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3159b60b348f4caa983a51a445b7fe91\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1223,23 +1243,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b.vega-embed {\n",
+       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b.vega-embed details,\n",
-       "  #altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b.vega-embed details summary {\n",
+       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed details,\n",
+       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b\"></div>\n",
+       "<div id=\"altair-viz-8d07142173884b159e5d2cb719227005\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3362e5d6bcff4b2fb359a7a4c0c94a7b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8d07142173884b159e5d2cb719227005\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8d07142173884b159e5d2cb719227005\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1327,23 +1347,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-97ce605c7db046eeb65636e9e3771f8f.vega-embed {\n",
+       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-97ce605c7db046eeb65636e9e3771f8f.vega-embed details,\n",
-       "  #altair-viz-97ce605c7db046eeb65636e9e3771f8f.vega-embed details summary {\n",
+       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed details,\n",
+       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-97ce605c7db046eeb65636e9e3771f8f\"></div>\n",
+       "<div id=\"altair-viz-ee90247f85ea4b1b90f05932d244309e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-97ce605c7db046eeb65636e9e3771f8f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-97ce605c7db046eeb65636e9e3771f8f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ee90247f85ea4b1b90f05932d244309e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ee90247f85ea4b1b90f05932d244309e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1421,22 +1441,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f81f54cd-e4a8-42da-9cb2-a161f1962970",
+   "cell_type": "markdown",
+   "id": "4ebd34e2-e05f-4743-af01-3677017a3425",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e216680-bd9a-4f33-a357-c3a5a246c537",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Expected Outcomes and Significance\n",
+    "\n",
+    "We expect to find the accuracy with which the model can predict the price of a laptop using a selection of its hardware specifications. A potential impact that our findings can have is that companies and laptop sellers would be able to better and more appropriately price their products and cater to consumers. Another impact could be raising consumer awareness, as they would be able to better understand the true worth of the items they are purchasing. A question that could arise is whether the price of a laptop should only depend on its specifications, and whether other potential factors such as brand, location, aesthetic features affect, or should affect, price."
+   ]
   }
  ],
  "metadata": {
