--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In today's modern age, technological devices have become an integral part of society. With ever-evolving computer components, it can be difficult to conduct research on a laptop that fits an individuals specific needs. In our algorithm, we will be providing price estimates based on the hardware specifications provided in our dataset. For instance, we could use variables such as CPU and OS to predict the price of a laptop. Ultimately, our goal is to assist the users and companies by providing a price estimate for their ideal laptop, thus, reducing the time needed for research."
+    "In today's modern age, technological devices have become an integral part of society. With ever-evolving computer components, it can be difficult to conduct research on a laptop that fits an individuals specific needs. In our algorithm, we will be providing price estimates based on the hardware specifications provided in our dataset. For instance, we could use variables such as CPU speed and Ram size to predict the price of a laptop. Ultimately, our goal is to assist the users and companies by providing a price estimate for their ideal laptop, thus, reducing the time needed for research. Thus our predictive question would be \"what will be the price of a laptop based on its specifications?\". The dataset we will be using is an opensource file from kaggle. Link for the original dataset: https://www.kaggle.com/datasets/ehtishamsadiq/uncleaned-laptop-price-dataset/data"
    ]
   },
   {
@@ -615,23 +615,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed {\n",
+       "  #altair-viz-2209abc27f9d40dbb01902e8531ddc79.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed details,\n",
-       "  #altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd.vega-embed details summary {\n",
+       "  #altair-viz-2209abc27f9d40dbb01902e8531ddc79.vega-embed details,\n",
+       "  #altair-viz-2209abc27f9d40dbb01902e8531ddc79.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\"></div>\n",
+       "<div id=\"altair-viz-2209abc27f9d40dbb01902e8531ddc79\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-29b8f20ffc7647baaa0fd35e30ee23bd\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2209abc27f9d40dbb01902e8531ddc79\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2209abc27f9d40dbb01902e8531ddc79\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -721,23 +721,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed {\n",
+       "  #altair-viz-ededc635532443158e54966c5f822188.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed details,\n",
-       "  #altair-viz-d3f6159400be46bf80f92148964b34e0.vega-embed details summary {\n",
+       "  #altair-viz-ededc635532443158e54966c5f822188.vega-embed details,\n",
+       "  #altair-viz-ededc635532443158e54966c5f822188.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-d3f6159400be46bf80f92148964b34e0\"></div>\n",
+       "<div id=\"altair-viz-ededc635532443158e54966c5f822188\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d3f6159400be46bf80f92148964b34e0\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d3f6159400be46bf80f92148964b34e0\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ededc635532443158e54966c5f822188\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ededc635532443158e54966c5f822188\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -827,23 +827,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed {\n",
+       "  #altair-viz-8012de35fbb74445bf36bababe4bfa49.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed details,\n",
-       "  #altair-viz-8ed14b087404430fb548a3187391224b.vega-embed details summary {\n",
+       "  #altair-viz-8012de35fbb74445bf36bababe4bfa49.vega-embed details,\n",
+       "  #altair-viz-8012de35fbb74445bf36bababe4bfa49.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-8ed14b087404430fb548a3187391224b\"></div>\n",
+       "<div id=\"altair-viz-8012de35fbb74445bf36bababe4bfa49\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8ed14b087404430fb548a3187391224b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8ed14b087404430fb548a3187391224b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8012de35fbb74445bf36bababe4bfa49\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8012de35fbb74445bf36bababe4bfa49\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -931,23 +931,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed {\n",
+       "  #altair-viz-09d40010aa46491497be9ae895531862.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed details,\n",
-       "  #altair-viz-348134bfd4764523adcff63be69ffe2b.vega-embed details summary {\n",
+       "  #altair-viz-09d40010aa46491497be9ae895531862.vega-embed details,\n",
+       "  #altair-viz-09d40010aa46491497be9ae895531862.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-348134bfd4764523adcff63be69ffe2b\"></div>\n",
+       "<div id=\"altair-viz-09d40010aa46491497be9ae895531862\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-348134bfd4764523adcff63be69ffe2b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-348134bfd4764523adcff63be69ffe2b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-09d40010aa46491497be9ae895531862\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-09d40010aa46491497be9ae895531862\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1035,23 +1035,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed {\n",
+       "  #altair-viz-77b2d720250946929ca08abc33749f86.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed details,\n",
-       "  #altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd.vega-embed details summary {\n",
+       "  #altair-viz-77b2d720250946929ca08abc33749f86.vega-embed details,\n",
+       "  #altair-viz-77b2d720250946929ca08abc33749f86.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\"></div>\n",
+       "<div id=\"altair-viz-77b2d720250946929ca08abc33749f86\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9f91d1e1436649b0b0bbcf5d0daea7cd\");\n",
+       "    if (outputDiv.id !== \"altair-viz-77b2d720250946929ca08abc33749f86\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-77b2d720250946929ca08abc33749f86\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1139,23 +1139,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed {\n",
+       "  #altair-viz-f053c3c504484a6eb5f0380069a4e3b0.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed details,\n",
-       "  #altair-viz-3159b60b348f4caa983a51a445b7fe91.vega-embed details summary {\n",
+       "  #altair-viz-f053c3c504484a6eb5f0380069a4e3b0.vega-embed details,\n",
+       "  #altair-viz-f053c3c504484a6eb5f0380069a4e3b0.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3159b60b348f4caa983a51a445b7fe91\"></div>\n",
+       "<div id=\"altair-viz-f053c3c504484a6eb5f0380069a4e3b0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3159b60b348f4caa983a51a445b7fe91\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3159b60b348f4caa983a51a445b7fe91\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f053c3c504484a6eb5f0380069a4e3b0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f053c3c504484a6eb5f0380069a4e3b0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1243,23 +1243,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed {\n",
+       "  #altair-viz-5110b13ea665412bb43fd456dca6ca0a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed details,\n",
-       "  #altair-viz-8d07142173884b159e5d2cb719227005.vega-embed details summary {\n",
+       "  #altair-viz-5110b13ea665412bb43fd456dca6ca0a.vega-embed details,\n",
+       "  #altair-viz-5110b13ea665412bb43fd456dca6ca0a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-8d07142173884b159e5d2cb719227005\"></div>\n",
+       "<div id=\"altair-viz-5110b13ea665412bb43fd456dca6ca0a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8d07142173884b159e5d2cb719227005\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8d07142173884b159e5d2cb719227005\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5110b13ea665412bb43fd456dca6ca0a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5110b13ea665412bb43fd456dca6ca0a\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1347,23 +1347,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed {\n",
+       "  #altair-viz-b1d793468ccf42aa98082a92adf602d1.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed details,\n",
-       "  #altair-viz-ee90247f85ea4b1b90f05932d244309e.vega-embed details summary {\n",
+       "  #altair-viz-b1d793468ccf42aa98082a92adf602d1.vega-embed details,\n",
+       "  #altair-viz-b1d793468ccf42aa98082a92adf602d1.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-ee90247f85ea4b1b90f05932d244309e\"></div>\n",
+       "<div id=\"altair-viz-b1d793468ccf42aa98082a92adf602d1\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ee90247f85ea4b1b90f05932d244309e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ee90247f85ea4b1b90f05932d244309e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b1d793468ccf42aa98082a92adf602d1\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b1d793468ccf42aa98082a92adf602d1\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
