small edit to comments

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -140,13 +140,13 @@
     "\n",
     "# Cleaning data\n",
     "laptop_data = laptop_data.drop(columns=[\"Unnamed: 0\"])          # Filtering Columns\n",
-    "laptop_data = laptop_data.dropna()                                          # Removing redundant non-numeric part\n",
+    "laptop_data = laptop_data.dropna()                              # Removing redundant non-numeric part\n",
     "laptop_data['Ram'] = laptop_data['Ram'].str.extract('(\\d+)', expand=False)\n",
     "laptop_data['Weight'] = laptop_data['Weight'].str.removesuffix(\"kg\")\n",
     "laptop_data['Memory'] = laptop_data['Memory'].str.extract('(\\d+)', expand=False)\n",
     "laptop_data[\"Price\"] = laptop_data[\"Price\"] * 0.017                         # Convert Price from INR to CAD\n",
     "laptop_data = laptop_data.rename(columns={\"Inches\": \"ScreenSize_Inches\", \"Ram\": \"Memory_GB\", \"Memory\" : \"Storage\", \"Weight\" : \"Weight_Kg\", \"Price\" : \"Price_CAD\"})\n",
-    "# Convert columns to int/float\n",
+    "# Convert columns from strings to int/float\n",
     "laptop_data[\"Memory_GB\"] = pd.to_numeric(laptop_data.Memory_GB, errors='coerce')\n",
     "laptop_data[\"Weight_Kg\"] = pd.to_numeric(laptop_data.Weight_Kg, errors='coerce')\n",
     "laptop_data[\"ScreenSize_Inches\"] = pd.to_numeric(laptop_data.ScreenSize_Inches, errors='coerce')\n",
